--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 	<!--header-->
-	<div class="header">
+	<div class="header" style="height: 55px;">
 		<div class="container">
 			<nav class="navbar navbar-default" role="navigation">
 				<div class="navbar-header">
@@ -105,9 +105,9 @@
 			</nav>
 			<div class="header-info">
 				<div class="header-right login">
-					<a href="#" id="user"><span class="glyphicon glyphicon-user"
+					<a href="#" id="user" style="right:150px;position: absolute;"><span class="glyphicon glyphicon-user"
 						aria-hidden="true"></span></a>
-					<div id="loginBox" style="right:16%;">                
+					<div id="loginBox" style="right:130px;top:54px;">                
 						<form id="loginForm">
 							<fieldset id="body">
 								<fieldset>
@@ -127,9 +127,9 @@
 					</div>
 				</div>
 				<div class="header-right cart">
-					<a href="#"><span class="glyphicon glyphicon-shopping-cart"
+					<a href="#" style="right:100px;position: absolute;"><span class="glyphicon glyphicon-shopping-cart"
 						aria-hidden="true"></span></a>
-					<div class="cart-box" style="right: 10.5%;">
+					<div class="cart-box" style="right: 75px;top:54px;">
 						<h4>
 							<a href="checkout.html"> <span class="simpleCart_total">
 									$0.00 </span> (<span id="simpleCart_quantity"
