--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <meta name="keywords" content="" />
 <script type="application/x-javascript">
 	
+	
 	 addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } 
+
 
 </script>
 <!-- //Custom Theme files -->
@@ -107,22 +109,27 @@
 				<div class="header-right login">
 					<a href="#" id="user"><span class="glyphicon glyphicon-user"
 						aria-hidden="true"></span></a>
-					<div id="loginBox" style="right:16%;">                
+					<div id="loginBox" style="right: 16%;">
 						<form id="loginForm">
 							<fieldset id="body">
 								<fieldset>
-									<label for="email">Email Address</label>
-									<input type="text" name="email" id="email">
+									<label for="email">Email Address</label> <input type="text"
+										name="email" id="email">
 								</fieldset>
 								<fieldset>
-									<label for="password">Password</label>
-									<input type="password" name="password" id="password">
+									<label for="password">Password</label> <input type="password"
+										name="password" id="password">
 								</fieldset>
-								<input type="button" id="login" value="Sign in" onClick="Login()">
-								<label for="checkbox"><input type="checkbox" id="checkbox"> <i>Remember me</i></label>
-								<a>ddd</a>
+								<input type="button" id="login" value="Sign in"
+									onClick="Login()"> <label for="checkbox"><input
+									type="checkbox" id="checkbox"> <i>Remember me</i><a
+									id=msg></a></label>
+
 							</fieldset>
-							<p>New User ? <a class="sign" href="account.html">Sign Up</a> <span><a href="#">Forgot your password?</a></span></p>
+							<p>
+								New User ? <a class="sign" href="account.html">Sign Up</a> <span><a
+									href="#">Forgot your password?</a></span>
+							</p>
 						</form>
 					</div>
 				</div>
