--- a/UserInfo.html
+++ b/UserInfo.html
@@ -1397,7 +1397,17 @@
 				<h2 class="modal-title" style="font-size: 24px;font-weight: 700;text-align: left;color: #34495e;">个人信息</h2>
 				<div class="row" style="margin:15px;">
 					<div class="col-lg-6 allinfo" id="allinfo" style="margin-top:30px;">
-						
+						<p>
+							<label>当前头像:</label>
+							<span class="pf-avatar-box">
+								<a class="pf-avatar">
+								<img src="//wwc.alicdn.com/avatar/getAvatar.do?userId=2013045725&amp;width=80&amp;height=80&amp;type=sns">
+								</a>
+								<a href="//i.taobao.com/user/headset.htm" class="pf-edit-avatar" style="display: none;">编辑头像</a>
+							</span>
+						</p>
+						<!-- <a style="text-align: right;">当前头像:&nbsp;&nbsp;&nbsp;&nbsp;</a>
+						<img src="images/tbuser.jpg" style="width:60px;height: 60px;"> -->
 					</div>
 					<div class="col-lg-6" id="timequery">
 						<div class="row-fluid" style="margin-top: 10px;">
